--- a/src/apps/code-editor/src/app/components/FileActions/components/DifferActions/DifferActions.less
+++ b/src/apps/code-editor/src/app/components/FileActions/components/DifferActions/DifferActions.less
@@ -3,11 +3,14 @@
 .DifferActions {
   align-items: center;
   display: flex;
-  padding: 8px 0 0 30px;
+  padding: 8px 0 8px 30px;
 
-  @media only screen and (min-width: 2000px) {
-    padding: 0 12px 0 220px;
+  @media only screen and (min-width: 1920px) {
+    padding-left: 0;
   }
+
+  // @media only screen and (min-width: 2000px) {
+  // }
 
   .Divider {
     font-size: 18px;
